Use getDeclaredConstructor for instance creation (#2293)
* Use getDeclaredConstructor for instance creation

Replaces clazz.newInstance() with clazz.getDeclaredConstructor().newInstance() for object instantiation, and updates the catch block to handle additional exceptions. This change improves compatibility with newer Java versions where newInstance() is deprecated.

* Update src/main/java/cn/nukkit/utils/Utils.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* [WIP] WIP address feedback on using getDeclaredConstructor (#2294)

Initial plan

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Co-authored-by: Copilot <198982749+Copilot@users.noreply.github.com>
Co-authored-by: PleaseInsertNameHere <73995049+PleaseInsertNameHere@users.noreply.github.com>